kubernetes/infrastructure/traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  annotations:
    metallb.io/loadBalancerIPs: 192.168.1.200
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP

    - name: websecure
      port: 443
      targetPort: 443
      protocol: TCP

    - name: dashboard
      port: 8080
      targetPort: 8080
      protocol: TCP
